feat(core): updating pnpm, latest deps, tweaking typing around fetchTyped args, new query parser/stringifier

--- a/.github/workflows/eslint-config-push-main.yaml
+++ b/.github/workflows/eslint-config-push-main.yaml
@@ -15,10 +15,11 @@ jobs:
     uses: iwsllc/workflows/.github/workflows/version-as-app.yaml@main
     with:
       ref: main
-      cache: npm
+      use-pnpm: true
+      cache: pnpm
       node-version-file: '.nvmrc'
       scope: '@iwsio'
-      version-command: npm version patch -w packages/eslint-config
+      version-command: npm version patch -w packages/eslint-config || true
       version-workspace: packages/eslint-config
       tag-includes-name: true
     secrets:
@@ -27,16 +28,17 @@ jobs:
   publish:
     needs: version
     if: ${{ !contains(github.event.head_commit.message, '#skip') }}
-    uses: iwsllc/workflows/.github/workflows/publish.yaml@v2
+    uses: iwsllc/workflows/.github/workflows/publish.yaml@v4
     with:
       ref: main
-      cache: npm
+      use-pnpm: true
+      cache: pnpm
       node-version-file: '.nvmrc'
       scope: '@iwsio'
       registry-url: 'https://registry.npmjs.org'
       install-command: 
       build-command: 
-      publish-command: npm publish -w packages/eslint-config --access public
+      publish-command: pnpm -F eslint-config publish --access public
     secrets:
       # This token is used for reading npm packages; use when private packages are used
       NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
