--- a/.github/workflows/fetch-push-main.yaml
+++ b/.github/workflows/fetch-push-main.yaml
@@ -9,14 +9,15 @@ on:
 jobs:
   tests:
     if: ${{ !contains(github.event.head_commit.message, '#skip') }}
-    uses: iwsllc/workflows/.github/workflows/test.yaml@v2
+    uses: iwsllc/workflows/.github/workflows/test.yaml@v4
     with:
       registry-url: 'https://registry.npmjs.org'
       scope: '@iwsio'
-      cache: npm
+      use-pnpm: true
+      cache: pnpm
       node-version-file: '.nvmrc'
-      install-command: npm ci
-      test-command: npm run test -w packages/fetch
+      install-command: pnpm install
+      test-command: pnpm -F fetch test
   version:
     needs: tests
     if: ${{ !contains(github.event.head_commit.message, '#skip') }}
@@ -27,10 +28,11 @@ jobs:
     with:
       ref: main
       registry-url: 'https://registry.npmjs.org'
+      use-pnpm: true
+      cache: pnpm
       node-version-file: '.nvmrc'
-      cache: npm
       scope: '@iwsio'
-      version-command: npm version patch -w packages/fetch
+      version-command: npm version patch -w packages/fetch || true
       version-workspace: packages/fetch
       tag-includes-name: true
     secrets:
@@ -39,16 +41,17 @@ jobs:
   publish:
     needs: version
     if: ${{ !contains(github.event.head_commit.message, '#skip') }}
-    uses: iwsllc/workflows/.github/workflows/publish.yaml@v2
+    uses: iwsllc/workflows/.github/workflows/publish.yaml@v4
     with:
       ref: main
       registry-url: 'https://registry.npmjs.org'
-      cache: npm
+      use-pnpm: true
+      cache: pnpm
       node-version-file: '.nvmrc'
       scope: '@iwsio'
-      install-command: npm ci
-      build-command: npm run build -w packages/fetch
-      publish-command: npm publish -w packages/fetch --access public
+      install-command: pnpm install
+      build-command: pnpm run build -w packages/fetch
+      publish-command: pnpm -F fetch publish --access public
     secrets:
       # This token is used for reading npm packages; use when private packages are used
       NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
