--- a/packages/fetch/package.json
+++ b/packages/fetch/package.json
@@ -28,21 +28,22 @@
     }
   },
   "devDependencies": {
+    "@iwsio/tsconfig": "workspace:*",
     "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
+    "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^24.8.1",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "express": "^5.1.0",
-    "jsdom": "^27.0.0",
+    "@types/node": "^25.0.9",
+    "@types/react": "^19.2.9",
+    "@types/react-dom": "^19.2.3",
+    "express": "^5.2.1",
+    "jsdom": "^27.4.0",
     "morgan": "^1.10.1",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "rimraf": "^6.0.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "rimraf": "^6.1.2",
     "tslib": "^2.8.1",
     "typescript": "^5.9.3",
-    "vitest": "^3.2.4"
+    "vitest": "^4.0.17"
   },
   "peerDependencies": {
     "react": ">= 18 < 20",
