--- a/.github/workflows/fetch-push-main.yaml
+++ b/.github/workflows/fetch-push-main.yaml
@@ -6,6 +6,10 @@ on:
     paths:
       - 'packages/fetch/**'
 
+permissions:
+  id-token: write  # Required for OIDC
+  contents: read
+
 jobs:
   tests:
     if: ${{ !contains(github.event.head_commit.message, '#skip') }}
