--- a/packages/fetch/package.json
+++ b/packages/fetch/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@iwsio/fetch",
-  "version": "2.1.4",
+  "version": "2.1.5-alpha.1",
   "license": "BSD-3-Clause",
   "description": "A simple set of functions to enable typed fetching using built-in fetch.",
   "repository": "github:iwsllc/iwsio-packages",
