--- a/.github/workflows/tsconfig-push-main.yaml
+++ b/.github/workflows/tsconfig-push-main.yaml
@@ -32,10 +32,11 @@ jobs:
   publish:
     needs: version
     if: ${{ !contains(github.event.head_commit.message, '#skip') }}
-    uses: iwsllc/workflows/.github/workflows/publish.yaml@v4
+    uses: iwsllc/workflows/.github/workflows/publish.yaml@v5
     with:
       ref: main
       use-pnpm: true
+      skip-node-auth: true
       cache: pnpm
       node-version-file: '.nvmrc'
       scope: '@iwsio'
