--- a/packages/fetch/package.json
+++ b/packages/fetch/package.json
@@ -35,6 +35,7 @@
     "@types/node": "^25.0.9",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
+    "eslint": "^9.39.2",
     "express": "^5.2.1",
     "jsdom": "^27.4.0",
     "morgan": "^1.10.1",
